# laba17-18

./: CMakeLists.txt  main.c
string/: CMakeLists.txt  string_.c  string_.h
